# wtg

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/config/: settings.py  urls.py
src/video_player/: urls.py  views.py
