[tool.poetry]
name = "wtg"
version = "0.1.0"
description = "wtg"
authors = ["Rozheliuk Vitalii <rozhelluk.py@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
django-stubs = "^4.2.7"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "src.config.settings"
